[gd_scene load_steps=7 format=3 uid="uid://cycdpqauu8805"]

[ext_resource type="Script" uid="uid://bwnb8imythxd4" path="res://assets/collectables/item_slot.gd" id="1_eirht"]
[ext_resource type="Texture2D" uid="uid://dwxwaxfjpnjlp" path="res://assets/collectables/blank_card.png" id="2_jdsv3"]
[ext_resource type="Shader" uid="uid://dhcwooedjvdjv" path="res://assets/shaders/card.gdshader" id="2_vtxj8"]
[ext_resource type="PackedScene" uid="uid://cxpuhbc7y4p34" path="res://ui/tooltip.tscn" id="3_vtxj8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vtxj8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wu3dp"]
resource_local_to_scene = true
shader = ExtResource("2_vtxj8")
shader_parameter/fov = 90.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[node name="ItemSlot" type="PanelContainer"]
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_vtxj8")
script = ExtResource("1_eirht")

[node name="ItemIcon" type="TextureButton" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_wu3dp")
use_parent_material = true
layout_mode = 2
button_mask = 3
texture_normal = ExtResource("2_jdsv3")

[node name="Tooltip" parent="ItemIcon" instance=ExtResource("3_vtxj8")]
unique_name_in_owner = true
z_index = 1
layout_mode = 0
offset_left = 120.0
offset_right = 290.0
offset_bottom = 54.0
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2

[node name="ItemWord" type="RichTextLabel" parent="ItemIcon"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 116.0
offset_bottom = 178.0
mouse_filter = 2
theme_override_colors/default_color = Color(0.9411765, 0.9647059, 0.9411765, 1)
theme_override_colors/font_outline_color = Color(0.13333334, 0.13725491, 0.13725491, 1)
theme_override_colors/font_shadow_color = Color(0.13333334, 0.13725491, 0.13725491, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "BINGO WORD"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stack" type="RichTextLabel" parent="ItemIcon"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 155.0
offset_right = 116.0
offset_bottom = 178.0
size_flags_vertical = 8
mouse_filter = 2
theme_override_colors/default_color = Color(0.9411765, 0.9647059, 0.9411765, 1)
theme_override_colors/font_outline_color = Color(0.13333334, 0.13725491, 0.13725491, 1)
theme_override_colors/font_shadow_color = Color(0.13333334, 0.13725491, 0.13725491, 1)
bbcode_enabled = true
text = "x999"
fit_content = true
scroll_active = false
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="gui_input" from="ItemIcon" to="." method="_on_item_icon_gui_input"]
[connection signal="mouse_entered" from="ItemIcon" to="." method="_on_item_icon_mouse_entered"]
[connection signal="mouse_exited" from="ItemIcon" to="." method="_on_item_icon_mouse_exited"]
[connection signal="pressed" from="ItemIcon" to="." method="_on_item_icon_pressed"]
